# OpenFlightReader

./: .gitIgnore  CMakeLists.txt  README.md  appveyor.yml  main.cpp  openFlight format notes.txt
assets/sample/: index.html
assets/sample/nested_references/doc/: index.html
assets/sample/nested_references/master/: master.flt
assets/sample/nested_references/shared/: a.flt  b.flt
assets/sample/nested_references2/db/1/: 1.flt
assets/sample/nested_references2/db/1/12/: 12.flt
assets/sample/nested_references2/db/1/12/123/: 123.flt
assets/sample/nested_references2/db/1/12/123/1234/: 1234.flt
assets/sample/nested_references2/db/1/12/123/t_com/: t_dig4.rgb
assets/sample/nested_references2/db/1/12/t_com/: t_dig3.rgb  t_dig3.rgb.attr
assets/sample/nested_references2/db/1/t_com/: t_dig2.rgb
assets/sample/nested_references2/db/t_com/: t_dig1.rgb
assets/sample/nested_references2/doc/: index.html
assets/testFiles/: ice_rwy.rgb.attr  switch.flt
generators/: CMakeLists.txt
generators/csharp/: CMakeLists.txt  OpenFlightLibrary.cs  Program.cs  packages.config
openFlight/: Document.cpp  Document.h  DotExporter.cpp  DotExporter.h  HeaderNode.cpp  HeaderNode.h  INode.cpp  INode.h  Nodes.h  OpCode.cpp  OpCode.h  OpenFlightReader.cpp  OpenFlightReader.h  OpenFlightReader_export.h  Record.cpp  Record.h  Records.h  StreamUtilities.cpp  StreamUtilities.h  TextureAttribute.cpp  TextureAttribute.h  Types.cpp  Types.h  Utilities.cpp  Utilities.h
openFlight/AncillaryRecords/: AncillaryRecord.h  CommentRecord.cpp  CommentRecord.h  IndexedStringRecord.cpp  IndexedStringRecord.h  LightPointAnimationPaletteRecord.cpp  LightPointAnimationPaletteRecord.h  LightPointAppearancePaletteRecord.cpp  LightPointAppearancePaletteRecord.h  LongIdRecord.cpp  LongIdRecord.h  MatrixRecord.cpp  MatrixRecord.h  MultiTextureRecord.cpp  MultiTextureRecord.h  PaletteRecords.cpp  PaletteRecords.h  TexturePaletteRecord.cpp  TexturePaletteRecord.h  TranslateRecord.cpp  TranslateRecord.h  UvListRecord.cpp  UvListRecord.h
openFlight/PrimaryRecords/: DegreeOfFreedomRecord.cpp  DegreeOfFreedomRecord.h  ExternalReferenceRecord.cpp  ExternalReferenceRecord.cpp.bak  ExternalReferenceRecord.h  FaceRecord.cpp  FaceRecord.h  GroupRecord.cpp  GroupRecord.h  HeaderRecord.cpp  HeaderRecord.h  IndexedLightPointRecord.cpp  IndexedLightPointRecord.h  LevelOfDetailRecord.cpp  LevelOfDetailRecord.h  MissingRecord.cpp  MissingRecord.h  ObjectRecord.cpp  ObjectRecord.h  PrimaryRecord.cpp  PrimaryRecord.h  SwitchRecord.cpp  SwitchRecord.cpp.bak  SwitchRecord.h  UnsupportedRecord.cpp  UnsupportedRecord.h  VertexListRecord.cpp  VertexListRecord.h
samples/: CMakeLists.txt
samples/1/: CMakeLists.txt  main.cpp
samples/2/: CMakeLists.txt  main.cpp
samples/ofReader/: CMakeLists.txt  main.cpp
samples/usingTheDll/: CMakeLists.txt  main.cpp
samples/usingTheDll/dll/: OpenFlightReader.lib  OpenFlightReader_d.lib
samples/usingTheDll/include/: DotExporter.h  OpenFlightReader.h  Record.h  Records.h  StreamUtilities.h  Types.h
samples/usingTheDll/include/AncillaryRecords/: AncillaryRecord.h  CommentRecord.h  LongIdRecord.h  MatrixRecord.h  PaletteRecords.h  TexturePaletteRecord.h  TranslateRecord.h
samples/usingTheDll/include/PrimaryRecords/: ExternalReferenceRecord.h  FaceRecord.h  GroupRecord.h  HeaderRecord.h  LevelOfDetailRecord.h  ObjectRecord.h  PrimaryRecord.h  UnsupportedRecord.h  VertexListRecord.h
tools/getSetMethodGenerator/: getSetGenerator.py  input.txt  output.txt
unitTests/: CMakeLists.txt  main.cpp
